# deforge-ai

./: .gitignore  README.md  dataset.py  main.py  model.py  plot_architecture.py  plot_augmentations.py  pyproject.toml  test.py  train.py
images/architecture/: DeForge-AI.json  DeForge-AI.vsdx
plots/: generate_samples_grids.py  plot_benchmark_results.py  plot_c2p_comparison.py
